--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1270,3 +1270,103 @@ header nav ul li .dropdown-toggle:hover {
     }
   }
 }
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 56px;
+  height: 100vh;
+  background-color: #12192c;
+  padding: 1.25rem 0.5rem 2rem;
+  transition: width 0.3s;
+  z-index: 100;
+}
+
+.sidebar--expanded {
+  width: 168px;
+}
+
+.sidebar__nav {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.sidebar__logo {
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+  padding: 0 0.5rem;
+}
+
+.sidebar__logo-icon {
+  margin-right: 1.2rem;
+}
+
+.sidebar__logo-text {
+  color: #ededed;
+  font-weight: 700;
+}
+
+.sidebar__toggle {
+  position: absolute;
+  top: 1.1rem;
+  right: -0.6rem;
+  width: 18px;
+  height: 18px;
+  background-color: #f5a623;
+  border-radius: 50%;
+  font-size: 1.25rem;
+  color: #12192c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.sidebar__toggle.rotate {
+  transform: rotate(180deg);
+}
+
+.sidebar__list {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar__link {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  color: #ededed;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.sidebar__link:hover {
+  background-color: #f5a623;
+  color: #12192c;
+}
+
+.sidebar__icon {
+  font-size: 1.5rem;
+  margin-right: .2rem;
+}
+
+.sidebar__text {
+  font-weight: 700;
+}
+
+.sidebar__link--active {
+  background-color: #f5a623;
+  color: #12192c;
+}
+
+body.expander {
+  padding: 1rem 0 0 12rem;
+  transition: padding 0.3s;
+}
