--- a/client/src/index.css
+++ b/client/src/index.css
@@ -867,15 +867,13 @@ header nav ul li .dropdown-toggle:hover {
   width: 12rem;
   height: 15rem;
   padding: 1rem;
-  flex-direction: row;
-  flex-wrap: wrap;
   position: relative;
   padding: 0.5rem;
   margin: 0.5rem;
   border-radius: 10px;
   text-align: center;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
@@ -1402,7 +1400,9 @@ body.expander {
 }
 
 .dashboard-name,
-.dashboard-number {
+.dashboard-number,
+.recent-queries,
+.admin-users {
   position: relative;
   padding: 1rem;
   margin: 1rem 1rem 2.5rem 4rem;
@@ -1421,6 +1421,12 @@ body.expander {
   border: 2px solid #1e1e1e;
   color: #0085ff;
 }
+.recent-queries,
+.admin-users {
+  background-color: #1e1e1e;
+  border: 2px solid #1e1e1e;
+  color: #0085ff;
+}
 
 .progressive-bar {
   display: flex;
@@ -1429,4 +1435,13 @@ body.expander {
   justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+.tables-area {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.recent-queries {
 }
